--- a/play-scala/app/views/blog.scala.html
+++ b/play-scala/app/views/blog.scala.html
@@ -22,7 +22,7 @@
 
 <div id="bubble-banner" class="row">
     <div class="large-12 columns">
-        <img src="@routes.Assets.at("images/bubble-logo-large.png")">
+        <img src="@routes.Assets.at("images/bubble-logo-large.jpg")">
         <hr>
     </div>
 </div>
