--- a/play-scala/app/views/blog.scala.html
+++ b/play-scala/app/views/blog.scala.html
@@ -2,37 +2,12 @@
 
 @main("Welcome to Play") {
 
-
-
-<body>
-
-<div class="row">
-    <div class="large-3 columns">
-        <h1><img src="http://placehold.it/400x100&text=Logo"></h1>
-    </div>
-    <div class="large-9 columns">
-        <ul class="button-group right">
-            <li><a href="#" class="button">Link 1</a></li>
-            <li><a href="#" class="button">Link 2</a></li>
-            <li><a href="#" class="button">Link 3</a></li>
-            <li><a href="#" class="button">Link 4</a></li>
-        </ul>
-    </div>
-</div>
-
-<div id="bubble-banner" class="row">
-    <div class="large-12 columns">
-        <img src="@routes.Assets.at("images/bubble-logo-large.jpg")">
-        <hr>
-    </div>
-</div>
-
 <div class="row">
     <div class="large-4 columns">
         <img src="http://placehold.it/400x300&text=[img]">
     </div>
-    <div class="large-8 columns">
-        <h4>This is a content section.</h4>
+    <section class="large-8 columns">
+        <h1>This is a content section.</h1>
         <div class="row">
             <div class="large-6 columns">
                 <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
@@ -91,7 +66,5 @@
       var doc = document.documentElement;
       doc.setAttribute('data-useragent', navigator.userAgent);
     </script>
-</body>
-</html>
 
 }
