--- a/play-scala/app/views/main.scala.html
+++ b/play-scala/app/views/main.scala.html
@@ -17,6 +17,32 @@
         <script src="@routes.Assets.at("javascripts/vendor/modernizr.js")"></script>
 
     </head>
+    <header>
+
+        <div class="row">
+            <div class="large-3 columns">
+                <h1><img src="http://placehold.it/400x100&text=Logo"></h1>
+            </div>
+            <div class="large-9 columns">
+                <ul class="button-group right">
+                    <li><a href="#" class="button">Link 1</a></li>
+                    <li><a href="#" class="button">Link 2</a></li>
+                    <li><a href="#" class="button">Link 3</a></li>
+                    <li><a href="#" class="button">Link 4</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="bubble-banner" class="row">
+            <div class="large-12 columns">
+                <img src="@routes.Assets.at("images/bubble-logo-large.jpg")">
+                <hr>
+            </div>
+        </div>
+
+
+
+    </header>
     <body>
         @content
     </body>
