--- a/play-scala/app/views/main.scala.html
+++ b/play-scala/app/views/main.scala.html
@@ -18,6 +18,32 @@
 
     </head>
     <header id="bubble-banner" class="row">
+
+
+        <a class="item">
+            <img src="../assets/img/images/fi-home.svg">
+            <label>Home</label>
+        </a>
+        <a class="item">
+            <img src="../assets/img/images/fi-bookmark.svg">
+            <label>Bookmark</label>
+        </a>
+        <a class="item">
+            <img src="../assets/img/images/fi-info.svg">
+            <label>Info</label>
+        </a>
+        <a class="item">
+            <img src="../assets/img/images/fi-mail.svg">
+            <label>Mail</label>
+        </a>
+        <a class="item">
+            <img src="../assets/img/images/fi-like.svg">
+            <label>Like</label>
+        </a>
+
+        <nav>
+
+        </nav>
     </header>
 
     <body>
