Fundamental CSS is there

--- a/app/views/events.scala.html
+++ b/app/views/events.scala.html
@@ -3,11 +3,13 @@
 @main("Welcome to Play") {
 
 <section>
+    <div class="large-9">
     <h1>@{event.title}</h1>
     <h2>@{event.location}</h2>
     <p id="eventDescription">
-        @{event.description}
+        @Html(event.description)
     </p>
+    </div>
 </section>
 
 }
