--- a/play-scala/app/views/main.scala.html
+++ b/play-scala/app/views/main.scala.html
@@ -28,7 +28,7 @@
             <img src="@routes.Assets.at("icons/fi-comments.svg")">
             <label>Blogs</label>
         </a>
-        <a class="item">
+        <a class="item" href="/twitter">
             <img src="@routes.Assets.at("icons/fi-social-twitter.svg")">
             <label>Follow us</label>
         </a>
@@ -36,7 +36,7 @@
             <img src="@routes.Assets.at("icons/fi-like.svg")">
             <label>Like us</label>
         </a>
-        <a class="item">
+        <a class="item" >
             <img src="@routes.Assets.at("icons/fi-mail.svg")">
             <label>Email Us</label>
         </a>
