--- a/play-scala/app/views/events.scala.html
+++ b/play-scala/app/views/events.scala.html
@@ -3,11 +3,13 @@
 @main("Welcome to Play") {
 
 <section>
+    <div class="small-8 column small-centered">
     <h1>@{event.title}</h1>
-    <h2>@{event.location}</h2>
+    <div class="vcard address">@{event.location}</div>
     <p id="eventDescription">
         @Html(event.description)
     </p>
+    </div>
 </section>
 
 }
