--- a/play-scala/app/views/main.scala.html
+++ b/play-scala/app/views/main.scala.html
@@ -41,13 +41,13 @@
         </a>
     </nav>
     <body>
-    <div class="small-8 column small-centered">
+
         @content
     </div>
     </body>
 
     <footer id="page-footer">
-                <div class="large-6 columns large-centered">
+                <div class="small-3 columns small-centered">
                     <p>&copy; Copyright no one at all. Go to town.</p>
                 </div>
     </footer>
