--- a/Design/Sass/analogous_colors.scss
+++ b/Design/Sass/analogous_colors.scss
@@ -1,8 +1,8 @@
-$left2_color: #A152FF;
-$left1_color: #684BE8;
-$dominant_color: #684BE8;
-$right1_color: #4B82E8;
-$right2_color: #52BCFF;
+$left2_color: #642A94;
+$left1_color: #4C2D9E;
+$dominant_color: #2D2D87;
+$right1_color: #2D4B9E;
+$right2_color: #2A6294;
  
  
 left2-color {
