--- a/play-scala/public/stylesheets/blue_theme.css
+++ b/play-scala/public/stylesheets/blue_theme.css
@@ -1,14 +1,14 @@
-.left2-color {
+left2-color {
   background-color: #642a94; }
 
-.left1-color {
+left1-color {
   background-color: #4c2d9e; }
 
-.dom-color {
+dom-color {
   background-color: #2d2d87; }
 
-.right1-color {
+right1-color {
   background-color: #2d4b9e; }
 
-.right2-color {
+right2-color {
   background-color: #2a6294; }
