--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,7 @@
 #bubble-banner {
       background-image: url('../images/bubble-logo-large-transparent.png');
       background-size: 230px;
+      background-color: #2D2D87;
       background-repeat: no-repeat;
       height: 200px;
       background-position: 0 2px;
@@ -11,18 +12,12 @@
       display: block;
     }
 
+#bubble-banner-nav {
+      background-color: #1371b7;
+}
+
 #page-footer {
     height: 80px;
     color: grey;
     background-color: black;
 }
-
-.address {
-    color: #2D2D87;
-}
-
-.center {
-    margin-left: auto;
-    margin-right: auto;
-    background-color: red;
-    }
