--- a/Content-Creation-Stack/React/css/main.css
+++ b/Content-Creation-Stack/React/css/main.css
@@ -29,3 +29,27 @@
   height: 100px; }
 
 /*# sourceMappingURL=main.css.map */
+
+
+#bubble-banner {
+      background-image: url('../images/bubble-logo-large-transparent.png');
+      background-size: 230px;
+      background-color: #2D2D87;
+      background-repeat: no-repeat;
+      height: 200px;
+      background-position: 0 2px;
+      min-width: 986px;
+      font-size: 16px;
+      display: block;
+    }
+
+#bubble-banner-nav {
+      background-color: #1371b7;
+}
+
+#page-footer {
+    height: 80px;
+    color: grey;
+    background-color: black;
+}
+
