--- a/play-scala/app/views/main.scala.html
+++ b/play-scala/app/views/main.scala.html
@@ -16,6 +16,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/vendor/modernizr.js")"></script>
+        <script src="@routes.Assets.at("javascripts/vendor/jquery.js")"></script>
 
     </head>
     <header id="bubble-banner" ></header>
