now need to add datepicker

--- a/play-scala/app/views/createEvent.scala.html
+++ b/play-scala/app/views/createEvent.scala.html
@@ -4,22 +4,23 @@
 
 <script src="@routes.Assets.at("javascripts/react/react.js")"></script>
 <script src="@routes.Assets.at("javascripts/react/JSXTransformer.js")"></script>
+<script src="@routes.Assets.at("javascripts/jquery-ui/jquery-ui.min.js")"></script>
 
     <div id="eventsBox" class="small-2 columns">
-        <li>React component should go here</li>
     </div>
 
 <form class="row" action="@routes.Events.save" method="post">
-    <div class="small-10 columns" >
+    <div class="small-8 columns" >
         @helper.inputText(eventForm("title"))
         @helper.inputText(eventForm("location"))
         @helper.textarea(eventForm("description"))
+
+        <input id="datepicker" class="hasDatepicker"></input>
     </div>
     <div class="row">
-        <button class="small-12 centered" type="submit">Add Event</button>
+        <button class="small-12 centered" type="submit">Save</button>
     </div>
 </form>
-
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/event-list.js")" ></script>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-box.js")" ></script>
 }
