--- a/play-scala/app/views/main.scala.html
+++ b/play-scala/app/views/main.scala.html
@@ -42,16 +42,18 @@
             <label>Email Us</label>
         </a>
     </nav>
+    <div id="container">
     <body>
-
-        @content
-    </div>
+         <div id="content">
+            @content
+        </div>
     </body>
-
+    </div>
+    <div id="footer">
     <footer id="page-footer">
                 <div class="small-3 columns small-centered">
                     <p>&copy; Copyright no one at all. Go to town.</p>
                 </div>
     </footer>
-
+    </div>
 </html>
