ready for image upload

--- a/play-scala/app/views/createEvent.scala.html
+++ b/play-scala/app/views/createEvent.scala.html
@@ -6,42 +6,35 @@
 <script src="@routes.Assets.at("javascripts/react/JSXTransformer.js")"></script>
 <script src="@routes.Assets.at("javascripts/jquery-ui/jquery-ui.min.js")"></script>
 
-    <div id="eventsBox" class="small-2 columns"></div>
-
-
+<div id="eventsBox" class="small-2 columns"></div>
 
 <form class="row" id="eventForm" action="@routes.Application.save" method="post">
     <div class="small-8 columns small-centered" >
+        @helper.inputText(eventForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "")
         @helper.inputText(eventForm("title"), '_label -> "Title")
         @helper.inputText(eventForm("location"), '_label -> "Location")
         @helper.textarea(eventForm("description"), '_label -> "Description")
-        @helper.inputDate(eventForm("displayFrom"), 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
-        @helper.inputDate(eventForm("displayUntil"), 'class -> "datepicker small-4 columns", '_label -> "...until...")
-
-        <!--<input type="date" id="displayFrom" name="displayFrom" value="" class="datepicker"/>-->
+        @helper.inputDate(eventForm("displayFrom"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
+        @helper.inputDate(eventForm("displayUntil"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
     <div class="row">
         <button id="saveButton" class="small-12 centered" type="submit">Save</button>
     </div>
 </form>
+
+<form action="@routes.Application.uploadImage" method="post"
+enctype="multipart/form-data">
+<input type="file" name="image">
+<input type="submit">
+</form>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/event-list.js")" ></script>
-<script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-box.js")" ></script>
+<script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-components.js")" ></script>
+<script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-calendar.js")" ></script>
 <script>
-      $(function() {
-            $( ".datepicker").datepicker({dateFormat: "dd-mm-yy"});
+    $(function() {
+        $( ".datepicker" ).datepicker({
+          dateFormat: "dd-mm-yy",
+          minDate: new Date()
+         });
       });
-
-    var validateDates = function() {
-            var start = document.getElementById("displayUntil");
-            var end = document.getElementById("displayFrom");
-            if (start.value == "") {
-                window.alert("Please enter a start date");
-            }
-
-            console.log("listener fired");
-            if (start.value < document.getElementById("displayFrom").value) {
-                            window.alert("Display from must be before display until!");
-                            return false;
-            };};
-    document.getElementById("displayUntil").addEventListener("click", validateDates);
-    </script>
+</script>
 }
