--- a/play-scala/app/views/events.scala.html
+++ b/play-scala/app/views/events.scala.html
@@ -6,7 +6,8 @@
     <div class="small-8 column small-centered">
     <h1>@{event.title}</h1>
     <div class="vcard address">@{event.location}</div>
-    <p id="eventDescription">
+    <img href="@{event.image1Url}" />
+        <p id="eventDescription">
         @Html(event.description)
     </p>
     </div>
