--- a/play-scala/app/views/main.scala.html
+++ b/play-scala/app/views/main.scala.html
@@ -14,9 +14,8 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/foundation/foundation.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/foundation/normalize.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/vendor/modernizr.js")"></script>
-        <script src="@routes.Assets.at("javascripts/vendor/jquery.js")"></script>
+        <script src="@routes.Assets.at("javascripts/vendor/jquery.js")" type="text/javascript"></script>
 
     </head>
     <header id="bubble-banner" ></header>
