image upload now working

--- a/play-scala/app/views/events.scala.html
+++ b/play-scala/app/views/events.scala.html
@@ -6,7 +6,7 @@
     <div class="small-8 column small-centered">
     <h1>@{event.title}</h1>
     <div class="vcard address">@{event.location}</div>
-    <img href="@{event.image1Url}" />
+    <img src="@{event.image1Url}" />
         <p id="eventDescription">
         @Html(event.description)
     </p>
