--- a/play-scala/app/views/loginForm.scala.html
+++ b/play-scala/app/views/loginForm.scala.html
@@ -1,8 +1,21 @@
-@()
-
 @main("Event Form") {
 
+<div class="g-signin2 small-centered column small-1" data-onsuccess="onSignIn"></div>
+
+
+
 <a href="#" onclick="signOut();">Sign out</a>
+
+<script>
+    function onSignIn(googleUser) {
+          var x = new FormData();
+          x.append("id", googleUser.getBasicProfile().getId();
+          var myRequest = new XMLHttpRequest();
+          myRequest.open("POST", "/login");
+          myRequest.send(x);
+    }
+</script>
+
 <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
@@ -12,16 +25,8 @@
   }
 </script>
 
-<script>
-    function onSignIn(googleUser) {
-          var profile = googleUser.getBasicProfile();
-          console.log('ID: ' + profile.getId());
-          console.log('Name: ' + profile.getName());
-          console.log('Image URL: ' + profile.getImageUrl());
-          console.log('Email: ' + profile.getEmail());
-    }
-</script>
-<script src="https://apis.google.com/js/platform.js" async defer></script>
+
+<script src="https://apis.google.com/js/client:platform.js" async defer></script>
 <meta name="google-signin-client_id"
       content="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com">
 }
