redirect on google sign in implemented

--- a/play-scala/app/views/loginForm.scala.html
+++ b/play-scala/app/views/loginForm.scala.html
@@ -1,18 +1,20 @@
 @main("Event Form") {
 
+<form id="loginForm" action="/login" method="POST">
+    <input type="hidden" id="id"/>
+</form>
+
 <div class="g-signin2 small-centered column small-1" data-onsuccess="onSignIn"></div>
-
-
 
 <a href="#" onclick="signOut();">Sign out</a>
 
 <script>
     function onSignIn(googleUser) {
-          var x = new FormData();
-          x.append("id", googleUser.getBasicProfile().getId();
-          var myRequest = new XMLHttpRequest();
-          myRequest.open("POST", "/login");
-          myRequest.send(x);
+          console.log("id value before change: " + document.getElementById("id").value)
+          document.getElementById("id").value = googleUser.getBasicProfile().getId();
+          console.log("posting " + googleUser.getBasicProfile().getId() + "to server");
+          console.log("id value after change: " + document.getElementById("id").value)
+          document.getElementById("loginForm").submit();
     }
 </script>
 
