--- a/play-scala/app/views/loginForm.scala.html
+++ b/play-scala/app/views/loginForm.scala.html
@@ -11,10 +11,15 @@
 <script>
     function onSignIn(googleUser) {
           console.log("id value before change: " + document.getElementById("id").value)
+          //
+          
           document.getElementById("id").value = googleUser.getBasicProfile().getId();
           console.log("posting " + googleUser.getBasicProfile().getId() + "to server");
           console.log("id value after change: " + document.getElementById("id").value)
-          document.getElementById("loginForm").submit();
+          
+          // defer form submit using
+          setTimeout(function() {document.getElementById("loginForm").submit();}, 1000);
+          
     }
 </script>
 
