created security tag

--- a/play-scala/app/views/portal.scala.html
+++ b/play-scala/app/views/portal.scala.html
@@ -2,4 +2,12 @@
 
 @main("Welcome to Play") {
     <h1>Hello Stranger! Your id is: @{id}</h1>
+
+<div class="g-signin2 small-centered column small-1" data-onsuccess="onSignIn"></div>
+
+<a href="#" onclick="signOut();">Sign out</a>
+
+
 }
+
+@securityTag()
