--- a/play-scala/app/views/portal.scala.html
+++ b/play-scala/app/views/portal.scala.html
@@ -1,9 +1,9 @@
 @(id: String)
 
 @main("Welcome to Play") {
-    <h1>Hello Stranger! Your id is: @{id}</h1>
+    <h1>Hello Stranger! @{id}</h1>
 
-<div class="g-signin2 small-centered column small-1" data-onsuccess="onSignIn"></div>
+    <li><a href="/create/event">Add or Edit an Event</a></li>
 
 <a href="#" onclick="signOut();">Sign out</a>
 
