--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -32,11 +32,11 @@
             <img src="@routes.Assets.at("icons/fi-social-twitter.svg")">
             <label>Follow us</label>
         </a>
-        <a class="item">
+        <a class="item" href="/facebook">
             <img src="@routes.Assets.at("icons/fi-like.svg")">
             <label>Like us</label>
         </a>
-        <a class="item" >
+        <a class="item" href="/emailUs">
             <img src="@routes.Assets.at("icons/fi-mail.svg")">
             <label>Email Us</label>
         </a>
