Introduced schema. Need to tidy up and bug fix

--- a/public-bubble/app/views/emailUs.scala.html
+++ b/public-bubble/app/views/emailUs.scala.html
@@ -1,6 +1,6 @@
 @main("Email Us!") {
 
-<form class="row" id="eventForm" action="@routes.Email.emailUs" method="post">
+<form class="row" id="emailForm" action="@routes.Email.emailUs" method="post">
     <div class="small-8 columns small-centered" >
 
         <input name="subject" type="text">
