--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -24,7 +24,7 @@
             <img src="@routes.Assets.at("icons/fi-calendar.svg")">
             <label>Events</label>
         </a>
-        <a class="item" href="/blog">
+        <a class="item" href="/blogs">
             <img src="@routes.Assets.at("icons/fi-comments.svg")">
             <label>Blogs</label>
         </a>
