--- a/public-bubble/app/views/createBlog.scala.html
+++ b/public-bubble/app/views/createBlog.scala.html
@@ -1,6 +1,6 @@
-@(eventForm: Form[Event])(implicit messages: Messages)
+@(blogForm: Form[Blog])(implicit messages: Messages)
 
-@main("Event Form") {
+@main("Blog Form") {
 
 <script src="@routes.Assets.at("javascripts/react/react.js")"></script>
 <script src="@routes.Assets.at("javascripts/react/JSXTransformer.js")"></script>
@@ -9,41 +9,41 @@
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
 
-<div id="eventsBox" class="small-2 columns"></div>
+<div id="blogsBox" class="small-2 columns"></div>
 
-<form class="row" id="eventForm" action="@routes.Application.save" method="post">
+<form class="row" id="blogForm" action="@routes.Blogs.save" method="post">
     <div class="small-8 columns small-centered" >
-        @helper.inputText(eventForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "")
-        @helper.inputText(eventForm("title"), '_label -> "Title")
-        @helper.inputText(eventForm("location"), '_label -> "Location")
-        @helper.textarea(eventForm("description"), '_label -> "Description")
-        @helper.inputDate(eventForm("displayFrom"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
-        @helper.inputDate(eventForm("displayUntil"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
+        @helper.inputText(blogForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "")
+        @helper.inputText(blogForm("title"), '_label -> "Author")
+        @helper.inputText(blogForm("author"), '_label -> "Title")
+        @helper.inputText(blogForm("content"), '_label -> "Content")
+        @helper.inputDate(blogForm("displayFrom"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
+        @helper.inputDate(blogForm("displayUntil"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
     <div class="row">
         <button id="saveButton" class="small-12 centered" type="submit">Save</button>
     </div>
 </form>
 
-<form id="pictureForm" action="@routes.Application.uploadImage" method="post" enctype="multipart/form-data">
+<form id="pictureForm" action="@routes.Blogs.uploadImage" method="post" enctype="multipart/form-data">
     <input id="image1of2" type="file" name="image">
     <button id="imageUploadButton" type="button" value="Upload"/>
 </form>
-<script type="text/jsx" src="@routes.Assets.at("javascripts/components/event-list.js")" ></script>
-<script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-components.js")" ></script>
-<script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-calendar.js")" ></script>
+<script type="text/jsx" src="@routes.Assets.at("javascripts/components/blog-list.js")" ></script>
+<script type="text/jsx" src="@routes.Assets.at("javascripts/components/blogs-components.js")" ></script>
+<script type="text/jsx" src="@routes.Assets.at("javascripts/components/blogs-calendar.js")" ></script>
 <script>
     document.getElementById("imageUploadButton").addEventListener('click', function() {
         console.log("click listener registered");
 
         var x = new FormData()
         x.append("image1", document.getElementById("image1of2").files[0]);
-        x.append("domainObject", "event");
+        x.append("domainObject", "blog");
 
-        var eventId = document.getElementById("id").value
+        var blogId = document.getElementById("id").value
 
-        x.append("id", eventId)
+        x.append("id", blogId)
         var request = new XMLHttpRequest();
-        request.open("POST", "@routes.Application.uploadImage");
+        request.open("POST", "@routes.Blogs.uploadImage");
         request.send(x);
     });
 
@@ -55,6 +55,4 @@
       });
 
 </script>
-
-
 }
