integrated WYSIWYG.js

--- a/public-bubble/app/views/blogs.scala.html
+++ b/public-bubble/app/views/blogs.scala.html
@@ -11,7 +11,7 @@
         <h2>@{blog.author}</h2>
         <div class="row">
             <div class="large-6 columns">
-                @{blog.content}
+                @Html(blog.content)
             </div>
         </div>
 </div>
