--- a/public-bubble/app/views/createBlog.scala.html
+++ b/public-bubble/app/views/createBlog.scala.html
@@ -6,6 +6,9 @@
 <script src="@routes.Assets.at("javascripts/react/JSXTransformer.js")"></script>
 <script src="@routes.Assets.at("javascripts/jquery-ui/jquery-ui.min.js")"></script>
 
+
+@wysiwyg()
+
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
 
@@ -16,7 +19,7 @@
         @helper.inputText(blogForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "")
         @helper.inputText(blogForm("title"), '_label -> "Author")
         @helper.inputText(blogForm("author"), '_label -> "Title")
-        @helper.inputText(blogForm("content"), '_label -> "Content")
+        @helper.inputText(blogForm("content"), '_label -> "Content", 'id -> "wysiwyg-editor")
         @helper.inputDate(blogForm("displayFrom"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
         @helper.inputDate(blogForm("displayUntil"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
     <div class="row">
