--- a/public-bubble/app/views/blogs.scala.html
+++ b/public-bubble/app/views/blogs.scala.html
@@ -2,24 +2,22 @@
 
 @main("Welcome to Play") {
 
-<div class="row">
-    <div class="large-4 columns">
-        <img src="http://placehold.it/400x300&text=[img]">
-    </div>
-    <section class="large-8 columns">
-        <h1>@{blog.title}</h1>
-        <h2>@{blog.author}</h2>
+    <section>
         <div class="row">
-            <div class="large-6 columns">
+            <h1>@{blog.title}</h1>
+            <h2>by @{blog.author}</h2>
+        </div>
+        <div class="row">
+            <div class="small-12 columns">
                 @Html(blog.content)
             </div>
         </div>
-</div>
+    </section>
 
-    <div class="large-4 columns">
-        <img src="http://placehold.it/400x300&text=[img]">
-    </div>
-</div>
+    <!--<div class="large-4 columns">-->
+        <!--<img src="http://placehold.it/400x300&text=[img]">-->
+    <!--</div>-->
+<!--</div>-->
 
 <script>
   document.write('<script src=js/vendor/' +
