--- a/public-bubble/app/views/blogs.scala.html
+++ b/public-bubble/app/views/blogs.scala.html
@@ -1,23 +1,32 @@
 @(blog: Blog)
 
 @main("Welcome to Play") {
-
     <section>
         <div class="row">
-            <h1>@{blog.title}</h1>
-            <h2>by @{blog.author}</h2>
+            <div class="small-10 small-centered column">
+            <h3>@{blog.title}</h3>
+            <h6>by @{blog.author}</h6>
+            </div>
         </div>
         <div class="row">
-            <div class="small-12 columns">
+            <div class="small-10 small-centered column">
+                <i style="color:#1371b7">
+                Child Sexual Exploitation is an important issue in today’s society. The media are constantly reporting
+                the latest case of CSE and the public sector is eager to find solutions.
+                </i>
+            </div>
+        </div>
+        <div class="row">
+            <div class="small-10 small-centered column">
+                <img src="http://placehold.it/800x370&text=[img]">
+            </div>
+        </div>
+        <div class="row">
+            <div class="small-10 small-centered columns">
                 @Html(blog.content)
             </div>
         </div>
     </section>
-
-    <!--<div class="large-4 columns">-->
-        <!--<img src="http://placehold.it/400x300&text=[img]">-->
-    <!--</div>-->
-<!--</div>-->
 
 <script>
   document.write('<script src=js/vendor/' +
