--- a/public-bubble/app/views/createBlog.scala.html
+++ b/public-bubble/app/views/createBlog.scala.html
@@ -18,8 +18,10 @@
         @helper.inputText(blogForm("title"), '_label -> "Title")
         @helper.inputText(blogForm("author"), '_label -> "Author")
         @helper.inputText(blogForm("content"), '_label -> "Content", 'id -> "wysiwyg-editor")
-        @helper.inputDate(blogForm("displayFrom"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
-        @helper.inputDate(blogForm("displayUntil"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
+        @defining(java.time.LocalDateTime.now().toString.substring(0,10)) { today =>
+            @helper.inputDate(blogForm("displayFrom"), 'min -> today, '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
+            @helper.inputDate(blogForm("displayUntil"), 'min -> today, '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
+        }
     <div class="row">
         <button id="saveButton" class="small-12 centered" type="submit">Save</button>
     </div>
@@ -47,12 +49,5 @@
         request.open("POST", "@routes.Blogs.uploadImage");
         request.send(x);
     });
-
-    $(function() {
-        $( ".datepicker" ).datepicker({
-          dateFormat: "dd-mm-yy",
-          minDate: new Date()
-         });
-      });
 </script>
 }
