--- a/public-bubble/app/views/createEvent.scala.html
+++ b/public-bubble/app/views/createEvent.scala.html
@@ -19,8 +19,13 @@
         @helper.inputText(eventForm("title"), '_label -> "Title")
         @helper.inputText(eventForm("location"), '_label -> "Location")
         @helper.textarea(eventForm("description"), '_label -> "Description", '_id -> "wysiwyg-editor")
-        @helper.inputDate(eventForm("displayFrom"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
-        @helper.inputDate(eventForm("displayUntil"), '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
+
+        @defining(java.time.LocalDateTime.now().toString.substring(0,10)) { today =>
+
+            @helper.inputDate(eventForm("displayFrom"), 'min -> today, '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
+
+            @helper.inputDate(eventForm("displayUntil"), 'min -> today, '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
+        }
     <div class="row">
         <button id="saveButton" class="small-12 centered" type="submit">Save</button>
     </div>
