added intro to blog

--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -23,7 +23,7 @@
         <div id="bubble-banner" class="small-12 columns">
         <nav id="bubble-banner-nav" class="nav-bar right ">
             <ul class="button-group">
-            <li><a class="button " href="/events">
+            <li><a class="button nav-button" href="/events">
                 <img class="nav-icon" src="@routes.Assets.at("icons/fi-calendar.svg")">
                 <label>Events</label>
             </a></li>
@@ -39,10 +39,10 @@
                 <img class="nav-icon" src="@routes.Assets.at("icons/fi-like.svg")">
                 <label>Like us</label>
             </a></li>
-            <li><a class="button" href="/emailUs">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-mail.svg")">
-                <label>Email Us</label>
-            </a></li>
+            <!--<li><a class="button" href="/emailUs">-->
+                <!--<img class="nav-icon" src="@routes.Assets.at("icons/fi-mail.svg")">-->
+                <!--<label>Email Us</label>-->
+            <!--</a></li>-->
             </ul>
         </nav>
         </div>
