--- a/public-bubble/app/views/createBlog.scala.html
+++ b/public-bubble/app/views/createBlog.scala.html
@@ -17,6 +17,7 @@
         @helper.inputText(blogForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "")
         @helper.inputText(blogForm("title"), '_label -> "Title")
         @helper.inputText(blogForm("author"), '_label -> "Author")
+        @helper.inputText(blogForm("intro"), '_label -> "Intro")
         @helper.inputText(blogForm("content"), '_label -> "Content", 'id -> "wysiwyg-editor")
         @defining(java.time.LocalDateTime.now().toString.substring(0,10)) { today =>
             @helper.inputDate(blogForm("displayFrom"), 'min -> today, '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
