--- a/public-bubble/app/views/loginForm.scala.html
+++ b/public-bubble/app/views/loginForm.scala.html
@@ -1,3 +1,5 @@
+@import play.api.Play
+
 @main("Event Form") {
 
 <form id="loginForm" action="/login" method="POST">
@@ -10,7 +12,7 @@
 
 <script src="https://apis.google.com/js/client:platform.js" async defer></script>
 <meta name="google-signin-client_id"
-content="347923709382-r0flg6bnis72vg1hur50jv94epcgvv71.apps.googleusercontent.com">
+      content="@{Play.current.configuration.getString("google.clientId")}">
 
 <script>
     function onSignIn(googleUser) {
